refactor(analytics): tests, error handling and authentication
